# monkeytype-desktop

./: Makefile.toml  README.md
src-tauri/: .license_template  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
